# very-lazy-boy

./: .gitignore  README.md  cpu-state-machine.cabal  flailing-gameboy-emulator.cabal  stack.yaml
app/: Debugger.hs  Graphical.hs  Graphics.hs  Main.hs
src/: BitTwiddling.hs  CPU.hs  CPURunner.hs  Cartridge.hs  Rom.hs  ShowHex.hs  Viewers.hs
src/CPU/: Arithmetic.hs  Common.hs  Environment.hs  Flags.hs  FrozenEnvironment.hs  IORegisters.hs  Instructions.hs  Interrupts.hs  Pointer.hs  Reference.hs  Types.hs
test/: CPUTestrunner.hs  CPU_test.hs
