name:                flailing-gameboy-emulator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChaosCabbage/my-haskell-flailing
license:             BSD3
license-file:        LICENSE
author:              Paul Courts
maintainer:          paul.courts@autodesk.com
copyright:           2017 Paul Courts
category:            emulator
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CPU
                     , Cartridge
                     , CPU.Types
                     , CPU.FrozenEnvironment
                     , CPU.Environment
                     , CPU.Instructions
                     , CPU.Interrupts
                     , CPURunner
                     , Viewers
  other-modules:       BitTwiddling
                     , ShowHex
                     , CPU.Flags
                     , CPU.Arithmetic
                     , CPU.IORegisters
  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
                     , bytestring
                     , cond
                     , split
  default-language:    Haskell2010

executable gameboy-debugger-exe
  hs-source-dirs:      app
  main-is:             Debugger.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flailing-gameboy-emulator
                     , array
  default-language:    Haskell2010

executable graphical-gameboy-exe
  hs-source-dirs:      app
  main-is:             Graphical.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , flailing-gameboy-emulator
                     , gloss
  default-language:    Haskell2010

test-suite flailing-gameboy-emulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             CPU_test.hs
  other-modules:       
  build-depends:       base
                     , flailing-gameboy-emulator
                     , array
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChaosCabbage/my-haskell-flailing
